--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: janus_sdk_flutter
 description: "Privacy consent management SDK for Flutter applications, wrapping the native Janus SDKs for Android and iOS."
-version: 0.1.4+5
+version: 0.1.5+6
 homepage: https://github.com/ethyca/janus-sdk-flutter
 repository: https://github.com/ethyca/janus-sdk-flutter
 issue_tracker: https://github.com/ethyca/janus-sdk-flutter/issues
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  webview_flutter: ^4.4.2
 
 dev_dependencies:
   flutter_test:
