--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,6 +7,7 @@ version: 0.1.0+1
 
 environment:
   sdk: ^3.7.2
+  flutter: '>=3.3.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,6 +30,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  # State management
+  provider: ^6.1.1
 
 dev_dependencies:
   integration_test:
