--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
 
   # State management
   provider: ^6.1.1
+  
+  # Local storage
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   integration_test:
