--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   # HTTP requests for HTTPLogger
   http: ^1.1.0
 
+# Appsflyer SDK support
+  appsflyer_sdk: ^6.17.5
+
 dev_dependencies:
   integration_test:
     sdk: flutter
